--- a/sass/site/compatibility/woocommerce/woocommerce.scss
+++ b/sass/site/compatibility/woocommerce/woocommerce.scss
@@ -111,6 +111,29 @@ p.demo_store,
 		.woocommerce-mini-cart__empty-message{
 			text-align: left;
 		}
+
+		.woocommerce {
+			ul.cart_list {
+				li  {
+					dl {
+						dd {
+							margin: 0;
+						}
+					}
+				}
+			}
+
+			ul.product_list_widget {
+				li  {
+					dl {
+						dd {
+							margin: 0;
+						}
+					}
+				}
+			}
+		}
+		
 	}
 
 	/* Cart container in header. */
